--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 #fishinfo {
-    width: 0% 10%;
+    margin: 0% 10%;
     height: 200px;
     bottom: 0px;
     width: -webkit-fill-available;
